{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 96,
  "lineage": "5d4457ed-f110-e369-be11-9e0948cb7402",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "utc-app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06a0cd9728546d178",
            "arn": "arn:aws:ec2:us-east-1:781382313434:instance/i-0f282e259dcbfbccc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "utc-ebs"
                },
                "tags_all": {
                  "Name": "utc-ebs"
                },
                "throughput": 0,
                "volume_id": "vol-0cc7edfd0b1e302e1",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f282e259dcbfbccc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "utc-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b92c3eb871949ef7",
            "private_dns": "ip-172-120-1-27.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.120.1.27",
            "public_dns": "ec2-54-235-238-48.compute-1.amazonaws.com",
            "public_ip": "54.235.238.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a43feb5065dadef2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a74568cd884b4af2",
            "tags": {
              "Env": "dev",
              "Name": "utc-app1-inst",
              "Team": "cloud transformation",
              "created_by": "stephane"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "utc-app1-inst",
              "Team": "cloud transformation",
              "created_by": "stephane"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-079dbd3ca2661fb92"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver-sg",
            "aws_subnet.public_subnet1a",
            "aws_vpc.utc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-wdp-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781382313434:internet-gateway/igw-0b9e401c82f78b83f",
            "id": "igw-0b9e401c82f78b83f",
            "owner_id": "781382313434",
            "tags": {
              "Name": "dev-Wdp-IGW"
            },
            "tags_all": {
              "Name": "dev-Wdp-IGW"
            },
            "vpc_id": "vpc-0c42ad92ccb6cf935"
          },
          "dependencies": [
            "aws_vpc.utc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781382313434:route-table/rtb-07c8f8b584e4a0762",
            "id": "rtb-07c8f8b584e4a0762",
            "owner_id": "781382313434",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9e401c82f78b83f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c42ad92ccb6cf935"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev-wdp-IGW",
            "aws_vpc.utc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d30d98be77150675",
            "route_table_id": "rtb-07c8f8b584e4a0762",
            "subnet_id": "subnet-0a74568cd884b4af2"
          },
          "dependencies": [
            "aws_internet_gateway.dev-wdp-IGW",
            "aws_route_table.rt",
            "aws_subnet.public_subnet1a",
            "aws_vpc.utc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d30d98be77150675",
            "route_table_id": "rtb-07c8f8b584e4a0762",
            "subnet_id": "subnet-0a74568cd884b4af2"
          },
          "dependencies": [
            "aws_internet_gateway.dev-wdp-IGW",
            "aws_route_table.rt",
            "aws_subnet.public_subnet1a",
            "aws_vpc.utc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781382313434:security-group/sg-079dbd3ca2661fb92",
            "description": "ssh allow just from your ip",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079dbd3ca2661fb92",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240310034656300700000002",
            "name_prefix": "terraform-",
            "owner_id": "781382313434",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c42ad92ccb6cf935"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.utc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781382313434:subnet/subnet-071980b9ce44f0afe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.120.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071980b9ce44f0afe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "781382313434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c42ad92ccb6cf935"
          },
          "dependencies": [
            "aws_vpc.utc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781382313434:subnet/subnet-0d51b596ff025871b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.120.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d51b596ff025871b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "781382313434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c42ad92ccb6cf935"
          },
          "dependencies": [
            "aws_vpc.utc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781382313434:subnet/subnet-0a74568cd884b4af2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.120.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a74568cd884b4af2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "781382313434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c42ad92ccb6cf935"
          },
          "dependencies": [
            "aws_vpc.utc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781382313434:subnet/subnet-08e6c5cb608ea46d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.120.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e6c5cb608ea46d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "781382313434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c42ad92ccb6cf935"
          },
          "dependencies": [
            "aws_vpc.utc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "utc-app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781382313434:vpc/vpc-0c42ad92ccb6cf935",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.120.0.0/16",
            "default_network_acl_id": "acl-0080b135412962fa5",
            "default_route_table_id": "rtb-071e0858eaced0b74",
            "default_security_group_id": "sg-04d2d3237fe4823fe",
            "dhcp_options_id": "dopt-0920909d42a870e91",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c42ad92ccb6cf935",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-071e0858eaced0b74",
            "owner_id": "781382313434",
            "tags": {
              "Env": "dev",
              "Name": "utc-app1",
              "Team": "wdp",
              "created_by": "Stephane"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "utc-app1",
              "Team": "wdp",
              "created_by": "Stephane"
            }
          }
        }
      ]
    }
  ]
}